--- a/MonoGame 3D Practice/3D Practice/3D Practice/3D Practice.csproj
+++ b/MonoGame 3D Practice/3D Practice/3D Practice/3D Practice.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
